<resources>
    <string name="app_name">语音评测</string>
    <string name="app_id">5ae19fa8</string>
    <string name="upload_topic">上传题目</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="language">语言</string>
    <string name="type">类型</string>
    <string name="syllable">汉字</string>
    <string name="word">词语</string>
    <string name="sentence">句子</string>
    <string name="chapter">篇章</string>
    <string name="content">内容</string>
    <string name="upload">上传</string>
    <string name="click_to_evaluator">点击开始评测</string>
    <string name="evaluator">评测</string>

    <!--OLD START-->
    <string name="info">通知</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="search_content">寻找想去的地方</string>
    <string name="view">查看</string>
    <string name="move_pin">定位中..</string>
    <string name="click_to_signin">点击登录</string>
    <string name="own_memories">创建的回忆</string>
    <string name="pip_memories">见证的回忆</string>
    <string name="intput_username">请输入用户名</string>
    <string name="input_passwd">请输入密码</string>
    <string name="input_passwd_again">再次输入密码</string>
    <string name="pick_name">昵称</string>
    <string name="sign_out">退出登录</string>
    <string name="input_your_discuss">评价这个记忆流</string>
    <string name="use_pic_location">在照片地理位置上传</string>
    <string name="camera">拍照</string>
    <string name="gallery">相册</string>
    <string name="current_address">当前位置:</string>
    <string name="pic_address">图片位置:</string>
    <string name="there_no_memory">此处没有记忆,快来添加吧!</string>
    <string name="comment">私信</string>
    <string name="there_no_message">暂时没有私信</string>
    <string name="search_user_name">搜索你想发送私信的人</string>
    <string name="message">私信</string>
    <string name="clear">清除聊天记录</string>
    <string name="send">发送</string>
    <string name="say_some_thing">说点什么吧</string>
    <!--OLD END-->
    <string name="anim">管理员</string>
    <string name="no_content">没有内容</string>
    <string name="question">题目</string>
    <string name="category">分类</string>
    <string name="me">我</string>
    <string name="username">用户</string>
    <string name="adminer">管理员</string>
    <string name="owner">出题人</string>
    <string name="search">搜索</string>
    <string name="add_category">添加新的分类</string>
    <string name="input_new_category">输入新的分类</string>
    <string name="select_category">点击选择类别</string>
    <string name="delete">删除</string>
</resources>
