<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/view_toolbar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/language"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rg_upload_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_chinese"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chinese" />

                <RadioButton
                    android:id="@+id/rb_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/english" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/type"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rg_upload_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_syllable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/syllable" />

                <RadioButton
                    android:id="@+id/rb_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/word" />

                <RadioButton
                    android:id="@+id/rb_sentence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sentence" />

                <RadioButton
                    android:id="@+id/rb_chapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chapter" />

            </RadioGroup>

            <EditText
                android:id="@+id/et_upload_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/content" />

            <LinearLayout
                android:id="@+id/vg_upload_select_category"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/adminer_style"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_category_white" />

                <TextView
                    android:id="@+id/tv_upload_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:text="@string/select_category"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_upload_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/upload"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/view_loading" />

</FrameLayout>