<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/username"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_me_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:text="Juhezi" />

        <TextView
            android:id="@+id/tv_me_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:background="@drawable/adminer_style"
            android:padding="3dp"
            android:text="@string/adminer"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_me_sign_out"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/sign_out"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>